--- a/links.html
+++ b/links.html
@@ -1,11 +1,15 @@
 <html>
 <head>
-<title>links</title>
+<style>
+a:link{color:blue;text-decoration:none;background-color:yellow}
+a:visited{color:purple;text-decoration:underline;background-color:pink}
+a:hover{color:green;text-decoration:underline;background-color:blue}
+a:active{color:red;text-decoration:none;background-color:yellow}
+</style>
 </head>
 <body>
-<center><h1>TEXT LINKS</h1></center><hr>
-<center>||<a href="https://www.google.com/">click the link</a>||<a href="https://www.google.com/search?q=facebook&oq=&aqs=chrome.1.35i39i362l8.175231813j0j15&sourceid=chrome&ie=UTF-8" target="blank">click facebook</a>||</center>
-<hr>
-<p>On the insert tab, the galleries include items that are designed to code your document.</p>
+<h1>
+<a href="https://www.youtube.com/watch?v=_-tR5OQS5cI&t=9245s" target="new">you tube</a>
+</h1>
 </body>
 </html>
