--- a/color.html
+++ b/color.html
@@ -1,7 +1,16 @@
 <html>
 <body>
-<h1 style=background-color:blue;text-align:center>hello!welcome to css</h1>
-<h1 style=background-color:rgb(255,255,255);text-align:right>hello!welcome to css</h1>
-<h1 style=background-color:rgb(100,202,255);text-align:right>hello!welcome to css</h1>
+<h1 style=background-color:blue>HELLO!welcome to CSS(color)</h1>
+
+<h1 style=background-color:#000055>HELLO!welcome to CSS(hexadecimal)</h1>
+
+<h1 style=background-color:rgb(0,0,255)>HELLO!welcome to CSS(using rgb function)</h1>
+
+<h1 style=background-color:rgba(0,0,100,1)>HELLO!welcome to CSS(using rgb with alpha)</h1>
+
+<h1 style=background-color:hsl(250,10%,50%)>HELLO!welcome to CSS(using hsl function)</h1> 
+
+<h1 style=background-color:hsla(150,50%,50%,0.5)>HELLO!welcome to CSS(using hsl function with alpha)</h1>
+
 </body>
 </html>
